# DBLingo

./: .env.sample  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: main.yml
src/dblingo/: dblingo.py  main.py  settings.py
src/dblingo/remotes/: __init__.py  owncloud.py
src/dblingo/sinks/: __init__.py  jsonl.py
src/dblingo/stores/: owncloud.py
src/dblingo/tools/: duolingo_jwt.py
tests/: pytest.ini  test_dblingo.py  test_jsonl.py
