[tool.poetry]
name = "dblingo"
version = "0.1.0"
description = "Duolingo Backup tool"
authors = ["Alexandar Mechev <apmechev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
duolingo-api = {git = "https://github.com/AidanCuff/Duolingo.git"}
pyocclient = "^0.6"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
pylint = "^2.17.5"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
